testdata/baselines/reference/submodule/conformance/typeFromJSInitializer4.errors.txt
a.js(2,5): error TS7034: Variable 'n' implicitly has type 'any' in some locations where its type cannot be determined.
a.js(5,12): error TS7006: Parameter 'a' implicitly has an 'any' type.
a.js(5,26): error TS7005: Variable 'n' implicitly has an 'any' type.
a.js(5,29): error TS7006: Parameter 'l' implicitly has an 'any[]' type.


==== a.js (4 errors) ====
    /** @type {number | undefined} */
    var n;
        ~
!!! error TS7034: Variable 'n' implicitly has type 'any' in some locations where its type cannot be determined.
    
    // should get any on parameter initialisers
    function f(a = null, b = n, l = []) {
               ~~~~~~~~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                             ~
!!! error TS7005: Variable 'n' implicitly has an 'any' type.
                                ~~~~~~
!!! error TS7006: Parameter 'l' implicitly has an 'any[]' type.
        // a should be any
        a = undefined
        a = null
        a = 1
        a = true
        a = {}
        a = 'ok'
    
        // b should be number | undefined, not any
        b = 1
        b = undefined
        b = 'error'
    
        // l should be any[]
        l.push(1)
        l.push('ok')
    }
    